--- a/index.html
+++ b/index.html
@@ -2,19 +2,29 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-    <title>My Weather App</title>
+  <title>My Weather App</title>
 </head>
 
 <body>
-    <header>
-        <h1>Welcome to my Weather App☁</h1>
-    </header>
+  <header>
+    <h1>Welcome to my Weather App☁</h1>
+  </header>
+  <footer>
 
+    <p>
+      This project was coded by <a href="https://github.com/roseann1024" target="_blank"> Rose Ann Austria</a> and
+      is <a href="https://github.com/roseann1024/weather-app-project" target="_blank">on GitHub </a>and <a
+        href="https://weather-rva-app.netlify.app/" target="_blank">hosted on Netlify</a>.
+
+    </p>
+
+  </footer>
 
 </body>
+
 
 </html>
