Updated the header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <h1>Welcome to my Weather App☁</h1>
+    <h1>Welcome to the Weather App🌞</h1>
   </header>
   <footer>
 
