--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <footer>
 
     <p>
-      This project was coded by <a href="https://github.com/roseann1024" target="_blank"> Rose Ann Austria</a> and
-      is <a href="https://github.com/roseann1024/weather-app-project" target="_blank">on GitHub </a>and <a
-        href="https://weather-rva-app.netlify.app/" target="_blank">hosted on Netlify</a>.
+      Coded by <a href="https://github.com/roseann1024" target="_blank"> Rose Ann Austria</a> is <a
+        href="https://github.com/roseann1024/weather-app-project" target="_blank">open-sourced on GitHub </a>and <a
+        href="https://weather-rva-app.netlify.app/" target="_blank">hosted on Netlify</a>
 
     </p>
 
