updated the content of HTML body

--- a/index.html
+++ b/index.html
@@ -11,8 +11,25 @@
 
 <body>
   <header>
-    <h1>Welcome to the Weather App🌞</h1>
+    <form>
+      <input type="search" placeholder="Enter a City..." required />
+      <input type="submit" value="Search" />
+    </form>
   </header>
+  <main>
+    <div>
+      <h1>Centennial</h1>
+      <p>
+        Monday 17:52, few clouds
+        <br />
+        Humidity: 74% Wind 0km/h
+      </p>
+    </div>
+    <div>
+      ☁ -21 °C
+    </div>
+  </main>
+
   <footer>
 
     <p>
