--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <link rel="stylesheet" href="src/styles.css">
 
   <title>My Weather App</title>
 </head>
@@ -41,6 +41,7 @@
 
   </footer>
 
+<link rel="stylesheet" href="">
 </body>
 
 
