--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </p>
       </div>
       <div class="weather-app-box">
-        <div class="weather-app-icon">☁</div>
+        <div class="weather-app-icon">⛅</div>
         <div class="weather-app-temperature">-21</div>
         <div class="weather-app-unit">°C</div>
       </div>
