Added basic CSS

--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
       </form>
     </header>
     <main class="weather-app-main">
-      <div class="weather-app-head">
-        <h1>Centennial</h1>
+      <div>
+        <div class="weather-app-head">
+          <h1>Iloilo City</h1>
+        </div>
         <p class="weather-app-details">
           Monday 17:52, few clouds
           <br />
@@ -41,7 +43,7 @@
     <footer>
 
       <p>
-        Coded by <a href="https://github.com/roseann1024" target="_blank"> Rose Ann Austria</a> is
+        Coded by <a href="https://github.com/roseann1024" target="_blank"> Rose Ann Austria</a> and is
         <a href="https://github.com/roseann1024/weather-app-project" target="_blank">open-sourced on GitHub </a>and
         <a href="https://weather-rva-app.netlify.app/" target="_blank">hosted on Netlify</a>
 
