updated the City name

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main class="weather-app-main">
       <div>
         <div class="weather-app-head">
-          <h1>Iloilo City</h1>
+          <h1>Centennial</h1>
         </div>
         <p class="weather-app-details">
           Monday 17:52, few clouds
