--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
-
+  <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
   <title>My Weather App</title>
 </head>
 
@@ -35,7 +35,7 @@
       </div>
       <div class="weather-app-box">
         <div class="weather-app-icon">⛅</div>
-        <div class="weather-app-temperature">-21</div>
+        <div class="weather-app-temperature" id="weather-app-temperature">-21</div>
         <div class="weather-app-unit">°C</div>
       </div>
     </main>
