updated the city element

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main class="weather-app-main">
       <div>
         <div class="weather-app-city">
-          <h1 id="weather-app-city">Centennial</h1>
+          <h1 id="weather-app-city"></h1>
         </div>
         <p class="weather-app-details">
           Monday 17:52, few clouds
@@ -35,7 +35,7 @@
       </div>
       <div class="weather-app-box">
         <div class="weather-app-icon">⛅</div>
-        <div class="weather-app-temperature" id="weather-app-temperature">-21</div>
+        <div class="weather-app-temperature" id="weather-app-temperature"></div>
         <div class="weather-app-unit">°C</div>
       </div>
     </main>
