injected the current weather details

--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
           <h1 id="weather-app-city"></h1>
         </div>
         <p class="weather-app-details">
-          Monday 17:52, few clouds
+          Monday 17:52, <span id="description"></span>
           <br />
-          Humidity: <strong>74%</strong> Wind <strong> 0km/h </strong>
+          Humidity: <strong span id="humidity"></strong></span>, Wind <strong span id="wind">
+          </strong></span>
         </p>
       </div>
       <div class="weather-app-box">
