Injected real Day and time

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <h1 id="weather-app-city"></h1>
         </div>
         <p class="weather-app-details">
-          Monday 17:52, <span id="description"></span>
+          <span id="time">,</span> <span id="description"></span>
           <br />
           Humidity: <strong span id="humidity"></strong></span>, Wind <strong span id="wind">
           </strong></span>
