--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </p>
       </div>
       <div class="weather-app-box">
-        <div class="weather-app-icon">⛅</div>
+        <div class="weather-app-icon" id="weather-app-icon"></div>
         <div class="weather-app-temperature" id="weather-app-temperature"></div>
         <div class="weather-app-unit">°C</div>
       </div>
