--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 <body>
   <div class="weather-app-container">
     <header>
+      <img
+        src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/111/006/original/Black_and_White_Monogram_Business_Logo_%282%29.png?1705529307"
+        alt="" class="logo">
       <form class="form-input" id="form-input">
         <input type="search" class="form-input-city" id="form-input-city" placeholder="Enter a City..." required />
         <input type="submit" class="form-input-button" value="Search" />
