--- a/index.html
+++ b/index.html
@@ -7,9 +7,21 @@
   <link rel="stylesheet" href="src/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
+
   <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
   <title>My Weather App</title>
 </head>
@@ -17,23 +29,42 @@
 <body>
   <div class="weather-app-container">
     <header>
-      <img
-        src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/111/006/original/Black_and_White_Monogram_Business_Logo_%282%29.png?1705529307"
-        alt="" class="logo">
+      <h1>WEATHER UPDATE
+        <img
+          src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/111/013/original/undraw_Weather_re_qsmd_%281%29.png?1705538682"
+          alt="" class="logo" width="200" />
+      </h1>
+
       <form class="form-input" id="form-input">
-        <input type="search" class="form-input-city" id="form-input-city" placeholder="Enter a City..." required />
-        <input type="submit" class="form-input-button" value="Search" />
+        <input type="search" class="form-input-city" id="form-input-city" placeholder="Enter a City... " required />
+        <input type="submit" class="form-input-button" value="🔍Search" />
       </form>
     </header>
+
+
+    <h2 class="weather-app-city" id="weather-app-city"></h2>
+
+    <div class="time" id="time"></div>
     <main class="weather-app-main">
       <div>
         <div class="weather-app-city">
           <h1 id="weather-app-city"></h1>
         </div>
         <p class="weather-app-details">
-          <span id="time">,</span> <span id="description"></span>
           <br />
-          Humidity: <strong span id="humidity"></strong></span>, Wind <strong span id="wind">
+          <span class="material-symbols-outlined" id="">
+            thermostat
+          </span>
+          <span id="description"></span><br />
+
+          <span class="material-symbols-outlined">
+            humidity_mid
+          </span>
+          Humidity: <strong span id="humidity"></strong></span><br />
+          <span class="material-symbols-outlined">
+            air
+          </span>
+          Wind: <strong span id="wind">
           </strong></span>
         </p>
       </div>
@@ -47,7 +78,7 @@
     <footer>
 
       <p>
-        Coded by <a href="https://github.com/roseann1024" target="_blank"> Rose Ann Austria</a> and is
+        👩‍💻Coded by <a href="https://github.com/roseann1024" target="_blank"> Rose Ann Austria</a> and is
         <a href="https://github.com/roseann1024/weather-app-project" target="_blank">open-sourced on GitHub </a>and
         <a href="https://weather-rva-app.netlify.app/" target="_blank">hosted on Netlify</a>
 
